
** Multiplot feature for time-domain plotting:
   
     impulse    lsim
     initial    step
     
   Supported are now function calls like
   impulse (sys1, sys2, ...), step (sys1, 'b', sys2, 'r', ...)
   lsim (sys1, '-k', sys2, '--k', u), initial (sys, sys2, x0)

** Anderson, Madievski, MDSSystem, optiPID
   Updated example scripts to use new multiplot feature.

** doc/control.pdf
   Updated PDF manual.


===============================================================================
control-2.3.54   Release Date: 2012-09-15   Release Manager: Lukas Reichlin
===============================================================================

** Multiplot feature for frequency-domain plotting:
   
     bode       nichols     pzmap
     bodemag    nyquist     sigma

   The functions above support calls like 
   sigma (sys1, sys2, ...), nyquist (sys1, 'b', sys2, 'r', ...),
   bode (sys1, '-k', sys2, '-.k', sys3, ':k', {wmin, wmax}).
   Time domain functions are not yet multiplot ready, but they will follow in
   control-2.4.0.

** plot
   A selection of experiments from iddata identification datasets can be
   plotted by  plot (dat, exp)  instead of  plot (dat(:,:,:,exp)).

** sensitivity
   Fixed a problem where an error was raised about an undefined function
   "issiso".

** All SLICOT function names have now leading and trailing underscores to
   emphasize their private nature.


===============================================================================
control-2.3.53   Release Date: 2012-08-27   Release Manager: Lukas Reichlin
===============================================================================

** Added new functions for system identification, including:
   
     arx        iddata       ifft
     moen4      detrend      nkshift
     moesp      fft          plot
     n4sid      filter       resample

** sensitivity
   Added new function to compute and plot the sensitivity margin Ms.

** feedback