@@ -47,6 +47,9 @@
 ## @item ptype = 3
 ## Singular values of the frequency response @code{I + inv(H)}; i.e. inversed complementary
 ## sensitivity if @code{H = P * C}.
+## @item 'style'
+## Line style and color, e.g. 'r' for a solid red line or '-.k' for a dash-dotted
+## black line.  See @command{help plot} for details.
 ## @end table
 ##
 ## @strong{Outputs}
